[tool.poetry]
name = "pytest-gather-fixtures"
version = "0.2.1"
description = "set up asynchronous pytest fixtures concurrently"
authors = ["Ben Avrahamni"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bentheiii/pytest-gather-fixtures"

[tool.poetry.dependencies]
python = "^3.8"

pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.1"
mypy = ">=0.902"
sphinx = "*"
coverage = "^6.3.2"
sphinx-copybutton = "^0.5.2"
furo = "^2024.8.6"
sluth = {version = "^0.2.0", python = "^3.12"}

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
output-format = "full"
target-version = "py38"
[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
select = ["I", "E", "W", "F", "N", "BLE", "COM", "C4", "ISC", "ICN", "G", "PIE", "T20", "PYI", "Q", "SLF", "SIM",
          "ERA", "PGH", "PLC", "PLE", "PLR", "PLW", "RUF", "PT", "B"]
# should be included later: UP, ANN, RET?, ARG, TRY, S
ignore = [
    "ISC001",  # ignored by linter because of formatter
    "COM812",  # trailing comma, handled by black
    "PLR0915",  # too many statements
    "PLR0913",  # too many arguments
    "PT013",  # incorrent import of pytest
]
exclude = [
    "docs/conf.py",
]

[tool.ruff.lint.isort]
combine-as-imports=true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PT004",  # fixture does not return anything
    "PLR2004",  # magix value in comparison
]